use existing node details

--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 POKT_URL='http://192.168.0.7:8091'
-NODES_FILE='nodes.csv'
+NODES_FILE='example.csv'
 # if you specify a private key it will be used, otherwise it'll try to load a keyfile. Leave empty if using a keyfile
 SENDER_PRIVATE_KEY=''
 SENDER_KEYFILE='keyfile.json'
