--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "@pokt-foundation/pocketjs-provider": "^2.1.3",
-    "@pokt-foundation/pocketjs-signer": "^2.1.3",
-    "@pokt-foundation/pocketjs-transaction-builder": "^2.1.3",
+    "@pokt-foundation/pocketjs-provider": "^2.2.1",
+    "@pokt-foundation/pocketjs-signer": "^2.2.1",
+    "@pokt-foundation/pocketjs-transaction-builder": "^2.2.1",
+    "async-retry": "^1.3.3",
+    "axios": "^1.7.3",
     "csv-parse": "^5.5.0",
     "dotenv": "^16.3.1"
   },
