update readme, .env

--- a/example.env
+++ b/example.env
@@ -1,8 +1,17 @@
+# Update this to the URL of the node you will use for the transaction
 POKT_URL='http://192.168.0.7:8091'
+# Update to the csv file created with staking details
 NODES_FILE='example.csv'
-# if you specify a private key it will be used, otherwise it'll try to load a keyfile. Leave empty if using a keyfile
+# If you specify a plaintext private key, it will be used, otherwise it'll try to load a keyfile.
+# Leave as empty string if using an encrypted keyfile (do not comment out or remove this param even if unused).
 SENDER_PRIVATE_KEY=''
+# Points to your keyfile
 SENDER_KEYFILE='keyfile.json'
+# If you don't specify a password below, you will be prompted to enter the password. This is preferred, but if you insist on writing your password in plaintext to disk, you can uncomment below to place the keyfile password
 # KEYFILE_PASSWORD='password'
-STAKE_AMOUNT=60000 #60k pokt, script will convert to uPokt
-RATE_LIMITED=true
+# 60k pokt, script will convert to uPokt
+STAKE_AMOUNT=60000
+# see README for more info
+RATE_LIMITED=true 
+# see README for more info
+# NEW_OUTPUT_ADDRESS=8bd6459cc4ab22cd462cef0e7f63527426bb36d9
